syntax = "proto3";

option csharp_namespace = "client";

package payment;

// The greeting service definition.
service PaymentService {
  
  rpc PaymentGateWaye(PaymentRequest) returns (PaymentResponse); 
}

message PaymentRequest{
	string username=1;
	double totalPrice=2;
}
message PaymentResponse{
	bool success=1;
}